# amxx-debugger-server

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
cmake/: AddAMXXPlugin.cmake  win32-msvc-static-ipo.cmake
src/: CMakeLists.txt  amxxmodule.cpp  amxxmodule.h  debugger.cpp  debugger.h  moduleconfig.h  plugin.cpp
src/amx/: CMakeLists.txt  amx.cpp  amxdbg.c  amxdbg.h
